--- a/ex002/style.css
+++ b/ex002/style.css
@@ -18,6 +18,17 @@ section{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.447);
 }
 
+div{
+    text-align: center;
+    padding: 5px;
+}
+
+img#manha{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
 footer{
     text-align: center;
     font-style: italic;
