--- a/ex003/style.css
+++ b/ex003/style.css
@@ -1,8 +1,34 @@
 @charset "UTF-8";
 
 *{
-    margin: 0;
-    padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    text-align: center;
+    align-items: center;
+}
+
+body{background: #d18b65;}
+
+header{
+    text-align: center;
+    padding: 10px;
+}
+
+section{
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.403);
+}
+
+div#res{
+    padding: 10px;
+    margin: 0px;
+}
+
+footer{
+    padding-top: 10px;
+    text-align: center;
+    font-style: italic;
 }
